tests/semantic/invalid/test_undeclared_in_expr.src
fn main() -> void {
    int y = x + 1;
}